--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #444;
+  color: #fff;
 }
 
 a {
@@ -12,5 +14,11 @@ a {
 }
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box; /* Leva em consideração as bordas */
+}
+
+/* Variáveis: */
+:root {
+  --area-porta-altura: 310px;
+  --area-porta-largura: 200px;
 }
